src/examples/valid/returns-condition.ra
func test(): int {
  if (1 < 2) {
    return 1;
  }
  return 2;
}

func second_test(): int {
  if (1 < 2) {
    return 3;
  } else if (1 < 3) {
    return 4;
  } else {
    return 5;
  }
}

func main(): void {
  print(test(), second_test());
}
