src/examples/invalid/static/undeclared-variable-while.ra
func main(): void {
  while (a < 2) {
    print(2);
  }
}

